# entropic-editor

./: .gitignore  LICENSE  editor.py  ee_anim_viewer.py  ee_asset_explorer.py  ee_assets.py  ee_canvas.py  ee_colours.py  ee_context.py  ee_cowtools.py  ee_dialogue_editor.py  ee_document_editor.py  ee_file_explorer.py  ee_geometry.py  ee_glyph_explorer.py  ee_imgui.py  ee_input.py  ee_mesh2d_editor.py  ee_notice_editor.py  ee_output_understander.py  ee_palette_viewer.py  ee_prototype_editor.py  ee_qr_encoder.py  ee_recipe_editor.py  ee_scene_editor.py  ee_sprite_explorer.py  ee_sprites.py  ee_theme_editor.py  ee_tool_window.py  ee_types.py  pyproject.toml  requirements.txt  testpypi_requirements.txt
src/entropic_editor/: asset_explorer.py  asset_types.py  assets.py  canvas.py  coder.py  context.py  cowtools.py  dialogue_editor.py  document_editor.py  editor.py  editor_gui.py  ee_asset_explorer.py  ee_assets.py  ee_canvas.py  ee_cowtools.py  ee_dialogue_editor.py  ee_document_editor.py  ee_file_explorer.py  ee_glyph_explorer.py  ee_imgui.py  ee_mesh2d_editor.py  ee_palette_viewer.py  ee_prototype_editor.py  ee_qr_encoder.py  ee_recipe_editor.py  ee_scene_editor.py  ee_sprites.py  ee_tool_window.py  file_explorer.py  glyph_viewer.py  input.py  mesh_editor.py  palette_viewer.py  prototype_editor.py  recipe_editor.py  scene_editor.py  script_editor.py  scripts.py  sprites.py  text_editor.py  (+1 more)
src/entropic_editor/scenes/: prototype_editor.py  scene_editor.py  tilemaps.py  walls.py
